--- a/djangocouch/djangocouchapp/templates/author/create.html
+++ b/djangocouch/djangocouchapp/templates/author/create.html
@@ -2,31 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Author</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<div class="container mt-5">
-    <h1>Create Author</h1>
-    <form method="post" action="/create-author/">
-        {% csrf_token %}
-        <div class="form-group">
-            <label for="id_name">Name</label>
-            <input type="text" class="form-control" id="id_name" name="name" required>
-        </div>
-        <div class="form-group">
-            <label for="id_birth_date">Birth Date</label>
-            <input type="date" class="form-control" id="id_birth_date" name="birth_date" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-</div>
-
-<!-- Bootstrap JS and dependencies -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <div class="container mt-5">
+        <h1>Create Author</h1>
+        <form action="http://127.0.0.1:8000/create-author/" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="birth_date">Birth Date</label>
+                <input type="date" class="form-control" id="birth_date" name="birth_date" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Create</button>
+        </form>
+    </div>
 </body>
 </html>
