--- a/djangocouch/djangocouchapp/templates/author/create.html
+++ b/djangocouch/djangocouchapp/templates/author/create.html
@@ -18,6 +18,14 @@
                 <label for="birth_date">Birth Date</label>
                 <input type="date" class="form-control" id="birth_date" name="birth_date" required>
             </div>
+            <div class="form-group">
+                <label for="country_of_origin">Country</label>
+                <input type="text" class="form-control" id="country_of_origin" name="country_of_origin" required>
+            </div>
+            <div class="form-group">
+                <label for="description">Descriptiom</label>
+                <input type="text" class="form-control" id="description" name="description" required>
+            </div>
             <button type="submit" class="btn btn-primary">Create</button>
         </form>
     </div>
