--- a/djangocouch/djangocouchapp/templates/book/management.html
+++ b/djangocouch/djangocouchapp/templates/book/management.html
@@ -1,16 +1,36 @@
-<!-- book/management.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Book Management</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Book Management</h1>
-    <ul>
-        {% for book in books %}
-            <li>{{ book.name }} by {{ book.author }}</li>
-        {% endfor %}
-    </ul>
-    <a href="{% url 'create_book' %}">Create a new book</a>
+    <div class="container mt-5">
+        <h1>Book Management</h1>
+        <a href="/create-book/" class="btn btn-primary mb-3">Create Book</a>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for row in authors.rows %}
+                    <tr>
+                        <td>{{ row.doc.name }}</td>
+                        <td>
+                            <a href="/{{ row.id }}/edit/" class="btn btn-warning btn-sm">Edit</a>
+                            <form action="/{{ row.id }}/delete/" method="post" style="display:inline;">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                            </form>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
