--- a/djangocouch/djangocouchapp/templates/book/management.html
+++ b/djangocouch/djangocouchapp/templates/book/management.html
@@ -17,12 +17,13 @@
                 </tr>
             </thead>
             <tbody>
-                {% for row in authors.rows %}
+                {% for book in books %}
                     <tr>
-                        <td>{{ row.doc.name }}</td>
+                        <td>{{ book.name }}</td>
                         <td>
-                            <a href="/{{ row.id }}/edit/" class="btn btn-warning btn-sm">Edit</a>
-                            <form action="/{{ row.id }}/delete/" method="post" style="display:inline;">
+                            <a href="/view-book/{{ book.id }}/" class="btn btn-warning btn-sm"> View</a>
+                            <a href="/book/{{ book.id }}/edit/" class="btn btn-warning btn-sm">Edit</a>
+                            <form action="/book/{{ book.id }}/delete/" method="post" style="display:inline;">
                                 {% csrf_token %}
                                 <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                             </form>
