--- a/djangocouch/djangocouchapp/templates/book/edit.html
+++ b/djangocouch/djangocouchapp/templates/book/edit.html
@@ -1,38 +1,58 @@
 <!DOCTYPE html>
+{% include "navbar.html" %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Book</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Edit Book</h1>
-    <form method="post">
-        {% csrf_token %}
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" value="{{ book.name }}" required><br><br>
+    <div class="container mt-5">
+        <h1 class="mb-4">Edit Book</h1>
+        <form method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" class="form-control" value="{{ book.name }}" required>
+            </div>
 
-        <label for="author">Author:</label>
-        <select id="author" name="author" required>
-            {% for author in authors %}
-                <option value="{{ author.id }}" {% if author.id == book.author %}selected{% endif %}>
-                    {{ author.name }}
-                </option>
-            {% endfor %}
-        </select><br><br>
+            <div class="form-group">
+                <label for="author">Author:</label>
+                <select id="author" name="author" class="form-control" required>
+                    {% for author in authors %}
+                        <option value="{{ author.id }}" {% if author.id == book.author %}selected{% endif %}>
+                            {{ author.name }}
+                        </option>
+                    {% endfor %}
+                </select>
+            </div>
 
-        <label for="date_of_publication">Date of Publication:</label>
-        <input type="date" id="date_of_publication" name="date_of_publication" value="{{ book.date_of_publication }}" required><br><br>
+            <div class="form-group">
+                <label for="date_of_publication">Date of Publication:</label>
+                <input type="date" id="date_of_publication" name="date_of_publication" class="form-control" value="{{ book.date_of_publication }}" required>
+            </div>
 
-        <label for="summary">Summary:</label>
-        <textarea id="summary" name="summary" required>{{ book.summary }}</textarea><br><br>
+            <div class="form-group">
+                <label for="summary">Summary:</label>
+                <textarea id="summary" name="summary" class="form-control" rows="3" required>{{ book.summary }}</textarea>
+            </div>
 
-        <label for="number_of_sales">Number of Sales:</label>
-        <input type="number" id="number_of_sales" name="number_of_sales" value="{{ book.number_of_sales }}" required><br><br>
+            <div class="form-group">
+                <label for="number_of_sales">Number of Sales:</label>
+                <input type="number" id="number_of_sales" name="number_of_sales" class="form-control" value="{{ book.number_of_sales }}" required>
+            </div>
 
-        <input type="submit" value="Update Book">
-    </form>
+            <button type="submit" class="btn btn-primary">Update Book</button>
+        </form>
 
-    <a href="{% url 'list_books' %}">Back to Book List</a>
+        <a href="{% url 'list_books' %}" class="btn btn-secondary mt-3">Back to Book List</a>
+    </div>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
