--- a/djangocouch/djangocouchapp/templates/book/view.html
+++ b/djangocouch/djangocouchapp/templates/book/view.html
@@ -17,7 +17,7 @@
                 <p class="card-text"><strong>Author:</strong> {{ author.name }}</p>
                 <p class="card-text"><strong>Summary:</strong> {{ book.summary }}</p>
                 <p class="card-text"><strong>Date of Publication:</strong> {{ book.date_of_publication }}</p>
-                <p class="card-text"><strong>Sales:</strong> {{ book.number_of_sales }}</p>
+                <p class="card-text"><strong>Sales:</strong> Rellenar acá</p>
                 <a href="{% url 'book_management' %}" class="btn btn-primary mt-3">Back to Book Management</a>
             </div>
         </div>
