--- a/djangocouch/djangocouchapp/templates/sales/management.html
+++ b/djangocouch/djangocouchapp/templates/sales/management.html
@@ -27,6 +27,10 @@
                         <td>{{ sale.sales }}</td>
                         <td>
                             <a href="/edit-sale/{{ sale.id }}/" class="btn btn-warning btn-sm">Edit</a>
+                            <form action="/sale/{{ sale.id }}/delete/" method="post" style="display:inline;">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                            </form>
                         </td>
                         
                     </tr>
