--- a/djangocouch/djangocouchapp/templates/navbar.html
+++ b/djangocouch/djangocouchapp/templates/navbar.html
@@ -15,7 +15,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="/book-management/">Books</a>
                 </li>
@@ -28,7 +28,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/list-sales/">Sales</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/top-50-books/">Top 50 books</a>
+                </li>
             </ul>
+            <form class="form-inline my-2 my-lg-0" method="post" action="/search_books/">
+                {% csrf_token %}
+                <input class="form-control mr-sm-2" type="search" placeholder="search books description" aria-label="Search" name="search_param">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </div>
     </nav>
 
