--- a/djangocouch/djangocouchapp/templates/navbar.html
+++ b/djangocouch/djangocouchapp/templates/navbar.html
@@ -34,6 +34,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/top-10-rated-books/">Top 10 rated books</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/author-stats/">Author Stats</a>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0" method="post" action="/search_books/">
                 {% csrf_token %}
