--- a/djangocouch/djangocouchapp/templates/book/create.html
+++ b/djangocouch/djangocouchapp/templates/book/create.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container mt-5">
         <h1>Create a New Book</h1>
-        <form method="POST">
+        <form method="POST" enctype="multipart/form-data"> <!-- Add enctype for file upload -->
             {% csrf_token %}
             <div class="form-group">
                 <label for="name">Book Name</label>
@@ -31,6 +31,10 @@
             <div class="form-group">
                 <label for="date_of_publication">Date of Publication</label>
                 <input type="date" class="form-control" id="date_of_publication" name="date_of_publication" required>
+            </div>
+            <div class="form-group"> <!-- New field for image upload -->
+                <label for="file_url">Book Cover Image</label>
+                <input type="file" class="form-control-file" id="file_url" name="file_url">
             </div>
             <button type="submit" class="btn btn-primary">Create Book</button>
         </form>
